added available techs

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Se Hwan Homepage</title>
 </head>
 <body>
-    <h1>환영합니다</h1>
+    <h4>사용 가능한 기술</h4>
+    
+    <ul>
+        <li>Java</li>
+        <li>Python 3</li>
+    </ul >
 </body>
 </html>
