added jordy image

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Se Hwan Homepage</title>
 </head>
 <body>
+    <img src ="jordy.png"/>
     <h4>사용 가능한 기술</h4>
     
     <ul>
         <li>Java</li>
         <li>Python 3</li>
     </ul >
+
 </body>
 </html>
