added jordy image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Se Hwan Homepage</title>
 </head>
 <body>
-    <img src ="jordy.png"/>
+    <img src ="/Users/jungsehwan/Documents/codes/homepage/jordy.png"/>
     <h4>사용 가능한 기술</h4>
     
     <ul>
