added tensorflow and web languages

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <ul>
         <li>Java</li>
         <li>Python 3</li>
+        <li>TensorFlow</li>
+        <li>HTML5, CSS3 & JS</li>
+
     </ul >
 
 </body>
