--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#project">Project</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -69,18 +69,20 @@
         <div class="subheading mb-5">17-807,200, Seochojungang-ro, Seocho-gu, Seoul, Republic of Korea· +82- (10) 8647-9580 ·
           <a href="jungsehwan0612@gmail.com">jungsehwan0612@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+
+        <p class="lead mb-5">
+          I enjoy developing services for people, especially to who has lots of brilliant ideas and wonderful dreams but lacks technological knowledge to make them real. I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/jungsehwan0612">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/profile.php?id=100003535192808">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -89,14 +91,14 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="project">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
+            <h3 class="mb-0">KU-RealTimeCC</h3>
+            <div class="subheading mb-3">Python3, OpenCV</div>
             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
           </div>
           <div class="resume-date text-md-right">
